Add connection to db and api route to get all books

--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "author": "Aakash Mangla",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "pg": "^8.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
